--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -11,7 +11,7 @@
 
 .destination-title {
     color: #00659f;
-    padding-top: 20px;
+    margin-top: 40px;
     text-align: center;
 }
 
@@ -20,16 +20,16 @@
     margin-bottom: 20px;
 }
 
+.article-destination {
+    margin-bottom: 20px;
+}
+
 .col-lg {
     padding-left: 0;
     padding-right: 0;
 }
 
-.article-destination {
-    margin-bottom: 20px;
-}
-
-/* ---------------------- Destination Images */
+/* ---------------------- Destination Images, Text and Buttons*/
 
 .img-left, 
 .img-right {
@@ -38,3 +38,46 @@
     width: 100%;
 }
 
+.about-destination-text {
+    text-align: center;
+    font-size: large;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.btn-book-tour {
+    background:#00659f;
+    color: #f8b840;
+}
+
+.btn-book-tour:hover {
+    background: #f8b840;
+    color: #0d669d;
+}
+
+
+/*--------------------------------------------- Back to top button */
+
+/* The code here for the back to top button has been taken from Material Design for Bootstrap (MDB) v5 & v4 */
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+}
+
+html {
+    scroll-behavior: smooth;
+  }
+
+/* Own code below to style the back to top button */
+.btn-back-to-top {
+    background: #00659f;
+    color: #f8b840;
+} 
+
+.btn-back-to-top:hover {
+    background:#f8b840;
+    color: #00659f;
+} 
