--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -11,7 +11,7 @@
 
 .destination-title {
     color: #00659f;
-    margin-top: 20px;
+    margin-top: 30px;
     text-align: center;
 }
 
@@ -83,4 +83,56 @@ html {
 .btn-back-to-top:hover {
     background:#f8b840;
     color: #00659f;
+}
+
+/*--------------------------------------------- Media Queries */
+
+@media (max-width: 1600px) { 
+    .btn-book-tour {
+        margin-bottom: 5%;
+    }
+
+    .img-right {
+    margin-bottom: 5%;
+    }
+}
+
+
+/*---------------- iPad Mini */
+
+@media (max-width: 768px) {
+    .btn-book-tour {
+        margin-left: 44%;
+    }
+
+    .img-right {
+        margin-bottom:5%;
+    }
+}
+
+
+/* iPad Mini Rotated */
+@media (max-width: 1024px) {
+    .destination-title {
+        font-size: x-large;
+        margin-top: 13px;
+    }
+
+    .about-destination-text {
+        font-size: medium;
+    }
+}
+
+
+
+/*---------------- iPhone 13 */
+
+@media (max-width: 481px) {
+    .btn-book-tour {
+        margin-left: 34%;
+    }
+
+    .img-right {
+        margin-bottom:5%;
+    }
 }
