Added final content for README.md testing as well as images for the Showcase and Testing section.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -101,7 +101,7 @@ html {
 }
 
 
-/*-------------------------- iPad Mini Rotated */
+/*-------------------------- iPad Rotated */
 @media (max-width: 1024px) {
     .destination-title {
         font-size: x-large;
